fix some bugs on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,6 @@ html,body,.cont{
 .camera span{
 
 }
-#first{
-	/*position: absolute;*/
-/*	width:60%;*/
-	/*top: 0; left: 0; bottom: 0; right: 0;*/
-/*	margin:10% auto;*/
-
-}
 .my_pane{
 	margin:2% 10%;
 	padding:2%;
